<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="SimpleStateFeedbackLaw" Id="{b6b00111-b334-4516-8a6e-fa6dcb5c765f}" SpecialFunc="None">
    <Declaration><![CDATA[//SimpleStateFeedbackLaw:
//Implements a simple state feedback law with a 3x3 control gain matrix 'K', 
//a translation speed limit 'vtrans_max' (x- and y-axis) and a rotational speed 
//limit 'vrot_max'.
FUNCTION_BLOCK SimpleStateFeedbackLaw
VAR_INPUT
	xRobotPose: 		RobotPoseSimple; 				//current pose
	xRobotPoseRef: 		RobotPoseSimple; 				//reference pose
END_VAR

VAR_OUTPUT
	//control outputs
	vXrobot:			LREAL;
	vYrobot:			LREAL;
	omegaRobot:			LREAL;
	reachedReference:	BOOL;
END_VAR

VAR
	//static control parameters
	K: ARRAY [0..2,0..2] OF LREAL := [1,0,0,
									  0,1,0,
									  0,0,1];
	poseError: RobotPoseSimple;
	vtrans_max: LREAL := 500; //vY,vY
	vrot_max: LREAL   := 1.5; //vTheta
	u: ARRAY[0..2] OF LREAL;
	i: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//1.) calculate pose errors
poseError.x 	:= xRobotPoseRef.x 		- xRobotPose.x;
poseError.y 	:= xRobotPoseRef.y 		- xRobotPose.y;
poseError.theta := xRobotPoseRef.theta 	- xRobotPose.theta;

//2.) apply gain on errors
FOR i := 0 TO 2 DO
	u[i] := K[0,i] * poseError.x + K[1,i] * poseError.y + K[2,i] * poseError.theta;
END_FOR;

//3.) apply saturation
FOR i := 0 TO 1 DO
	IF u[i] > vtrans_max THEN
		u[i] := vtrans_max;
	ELSIF u[i] < -vtrans_max THEN
		u[i] := -vtrans_max;
	END_IF
END_FOR

IF u[2] > vrot_max THEN
	u[2] := vrot_max;
ELSIF u[2] < -vrot_max THEN
	u[2] := -vrot_max;
END_IF

//4.) set control outputs
vXrobot 	:= u[0];
vYrobot 	:= u[1];
omegaRobot	:= u[2];

]]></ST>
    </Implementation>
    <LineIds Name="SimpleStateFeedbackLaw">
      <LineId Id="9" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="36" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="1" />
      <LineId Id="104" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="110" Count="4" />
      <LineId Id="109" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="74" Count="1" />
      <LineId Id="72" Count="1" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>